GNOME Bugzilla – Bug 770394
rtph265pay does not set RTP marker bit
Last modified: 2016-08-25 14:24:44 UTC
Created attachment 334147 [details] [review] rtph265pay: Set RTP marker bit rtph265pay does not set RTP marker bit on the last RTP packet of an H.265 access unit.
Attachment 334147 [details] pushed as e43dcd9 - rtph265pay: Set RTP marker bit